...
    android:layout_height="match_parent"
    tools:context="jkkv.scribble.HomeScreen"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:fontFamily="modern"
        android:text="Welcome To Scribble"
        android:textSize="34sp"
        android:textStyle="bold" />,

    <Button
        android:id="@+id/newProject"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:backgroundTint="@android:color/holo_blue_light"
...
