...
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#00ffff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="-100dp"
        app:backgroundTint="#cc99ff"
...
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#ffffcc"
        app:fabSize="mini"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="270dp"
        android:layout_marginEnd="200dp"
        app:backgroundTint="#ffffff"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="-200dp"
        app:backgroundTint="#00ccff"
...
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        app:backgroundTint="#ff6666"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/color9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="100dp"
        app:backgroundTint="#ffff00"
...
